--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "buefy": "^0.9.4",
+    "bulma": "^0.9.2",
     "core-js": "^3.9.0",
     "darkreader": "^4.9.27",
     "dayjs": "^1.10.4",
